--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="krugovi.png" alt="">
         </div>
     </div>
-    <div class="O_nama" class="scroll-animation" >
+    <div class="scroll-animation" class="O_nama"  >
         <div class="naslov-i-slika">
             <h2><span style="color: yellow;">WHY</span> US?</h2>
             <div class="kruzic_1">
